apollo-federation/src/connectors/validation/snapshots/validation_tests@uri_templates__invalid-path-parameter.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/connectors/validation/test_data/uri_templates/invalid-path-parameter.graphql
---
[
    Message {
        code: InvalidUrl,
        message: "In `GET` in `@connect(http:)` on `Query.resources`: unknown variable `$blah`, must be one of $args, $config, $context, $request",
        locations: [
            12:23..12:28,
        ],
    },
]
