apollo-federation/src/connectors/validation/snapshots/validation_tests@uri_templates__invalid_namespace_in_url_template_variables.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/connectors/validation/test_data/uri_templates/invalid_namespace_in_url_template_variables.graphql
---
[
    Message {
        code: InvalidUrl,
        message: "In `GET` in `@connect(http:)` on `Query.unknown`: unknown variable `$foo`, must be one of $args, $config, $context, $request, $env",
        locations: [
            11:31..11:35,
            11:36..11:39,
        ],
    },
    Message {
        code: InvalidUrl,
        message: "In `GET` in `@connect(http:)` on `Query.invalid`: $status is not valid here, must be one of $args, $config, $context, $request, $env",
        locations: [
            18:31..18:42,
        ],
    },
    Message {
        code: InvalidUrl,
        message: "In `GET` in `@connect(http:)` on `Query.nodollar`: `$root.config.bar` must start with one of $args, $config, $context, $request, $env",
        locations: [
            25:31..25:37,
            25:38..25:41,
        ],
    },
]
