apollo-federation/src/connectors/validation/snapshots/validation_tests@uri_templates__invalid_types.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: result.errors
input_file: apollo-federation/src/connectors/validation/test_data/uri_templates/invalid_types.graphql
---
[
    Message {
        code: InvalidUrl,
        message: "In `GET` in `@connect(http:)` on `Query.argIsArray`: expected union but received incompatible union\nDetails: `One<Float, Bool, String, null, None>` does not accept `One<[...One<String, null>], null>`",
        locations: [
            8:16..8:29,
            10:47..10:50,
        ],
    },
    Message {
        code: InvalidUrl,
        message: "In `GET` in `@connect(http:)` on `Query.argIsObject`: expected union but received incompatible union\nDetails: `One<Float, Bool, String, null, None>` does not accept `One<{ val: One<String, null> }, null>`",
        locations: [
            36:1..38:2,
            14:22..14:27,
            14:17..14:27,
            16:47..16:50,
        ],
    },
    Message {
        code: InvalidUrl,
        message: "In `GET` in `@connect(http:)` on `This.thisIsArray`: expected union but received incompatible union\nDetails: `One<Float, Bool, String, null, None>` does not accept `One<[...One<String, null>], null>`",
        locations: [
            25:47..25:54,
        ],
    },
    Message {
        code: InvalidUrl,
        message: "In `GET` in `@connect(http:)` on `This.requiresAnObject`: expected union but received incompatible union\nDetails: `One<Float, Bool, String, null, None>` does not accept `One<\n  {\n    __typename: One<\"Object\", None>,\n    stuff: One<String, null>,\n  },\n  null,\n>`",
        locations: [
            31:51..31:59,
        ],
    },
]
