apollo-federation/src/connectors/validation/snapshots/validation_tests@uri_templates__undefined_arg_in_url_template.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/connectors/validation/test_data/uri_templates/undefined_arg_in_url_template.graphql
---
[
    Message {
        code: InvalidUrl,
        message: "In `GET` in `@connect(http:)` on `Query.resources`: `$args` doesn't have a field named `blah`",
        locations: [
            10:39..10:44,
            10:45..10:49,
        ],
    },
    Message {
        code: InvalidUrl,
        message: "In `GET` in `@connect(http:)` on `Query.resources`: `$args` doesn't have a field named `something`",
        locations: [
            10:62..10:67,
            10:68..10:77,
        ],
    },
]
