apollo-federation/src/connectors/validation/snapshots/validation_tests@uri_templates__undefined_this_in_url_template.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: "format!(\"{:#?}\", result.errors)"
input_file: apollo-federation/src/connectors/validation/test_data/uri_templates/undefined_this_in_url_template.graphql
---
[
    Message {
        code: InvalidUrl,
        message: "In `GET` in `@connect(http:)` on `Something.resources`: `$this` doesn't have a field named `.blah`",
        locations: [
            19:45..19:49,
        ],
    },
    Message {
        code: InvalidUrl,
        message: "In `GET` in `@connect(http:)` on `Something.resources`: `$this` doesn't have a field named `.something`",
        locations: [
            19:68..19:77,
        ],
    },
]
